message QudtUnit {
    required string url = 1;
    optional string unitName =2; 
    optional string symbol = 3;
    required string unitClass = 4;
    optional string abbreviation = 5;
    optional string factor = 6;
    optional string offset = 7;
};

message ModelicaUnit {
    required string classPath = 1;
    optional string max = 2;
    optional string min = 3;
    optional string start = 4;
    optional string displayUnit = 5;
    required string quantity = 6;
};

message MdaoUnit {
    required string name = 1;
    optional string expression = 2;
    optional string comment = 3;
};

message Unit {
    required QudtUnit qudt_unit = 1;
    optional ModelicaUnit modelica_unit = 2;
    optional MdaoUnit mdao_unit = 3;
};